--- a/StrengthTrackerWeb/StrengthTrackerWeb/Views/Shared/_Layout.cshtml
+++ b/StrengthTrackerWeb/StrengthTrackerWeb/Views/Shared/_Layout.cshtml
@@ -67,6 +67,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/lib/angular.js"></script>
+        <script src="~/js/scripts.js" asp-append-version="true"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
@@ -84,9 +85,8 @@
                 asp-fallback-test="window.angular">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="~/js/scripts.min.js" asp-append-version="true"></script>
     </environment>
-    <script src="~/js/_app.js"></script>
-    <script src="~/js/newWorkoutController.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
