--- a/StrengthTrackerWeb/StrengthTrackerWeb/wwwroot/css/site.css
+++ b/StrengthTrackerWeb/StrengthTrackerWeb/wwwroot/css/site.css
@@ -38,14 +38,18 @@
     padding: 10px;
 }
 
-.new-workout-header h3, a {
-    display: inline;
-}
+    .new-workout-header h3, a {
+        display: inline;
+    }
 
-.new-workout-header h3 {
-    padding-right: 10px;
-}
+    .new-workout-header h3 {
+        padding-right: 10px;
+    }
 
 .exercise-cell {
     padding: 10px;
+}
+
+input {
+    width: 100%;
 }
