--- a/StrengthTrackerWeb/StrengthTrackerWeb/Views/Shared/_Layout.cshtml
+++ b/StrengthTrackerWeb/StrengthTrackerWeb/Views/Shared/_Layout.cshtml
@@ -26,11 +26,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">StrengthTrackerWeb</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Strength Tracker</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Dashboard</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="CurrentWorkout">Current Workout</a></li>
                 </ul>
             </div>
         </div>
