--- a/LB.Web/LB.Web/Views/Shared/_Layout.cshtml
+++ b/LB.Web/LB.Web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
 </head>
-<body ng-app="STApp">
+<body ng-app="LBApp">
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -40,7 +40,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - StrengthTrackerWeb</p>
+            <p>&copy; 2018 - LiftBook</p>
         </footer>
     </div>
 
