--- a/LB.Web/LB.Web/Views/_ViewImports.cshtml
+++ b/LB.Web/LB.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using StrengthTrackerWeb
-@using StrengthTrackerWeb.Models
+@using LB.Web
+@using LB.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
