--- a/LB.Web/LB.Web/Views/Shared/_Layout.cshtml
+++ b/LB.Web/LB.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,9 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
+    <environment include="Staging,Production">
+        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+    </environment>
 </head>
 <body ng-app="LBApp">
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -69,7 +72,8 @@
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/lib/angular.js"></script>
         <script src="~/js/scripts.js" asp-append-version="true"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
+        <script type="text/javascript" src="/Content/js/_app.js" asp-append-version="true"></script>
+        <script type="text/javascript" src="/Content/js/currentWorkoutController.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.1.4.min.js"
