Adding chart.js and dummy graph, removing boiler plate asp.net core code.

--- a/LB.Web/LB.Web/Views/Shared/_Layout.cshtml
+++ b/LB.Web/LB.Web/Views/Shared/_Layout.cshtml
@@ -71,9 +71,11 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/lib/angular.js"></script>
+        <script src="~/lib/chart.js"></script>
         <script src="~/js/scripts.js" asp-append-version="true"></script>
         <script type="text/javascript" src="/Content/js/_app.js" asp-append-version="true"></script>
         <script type="text/javascript" src="/Content/js/currentWorkoutController.js" asp-append-version="true"></script>
+        <script type="text/javascript" src="/Content/js/dashboardController.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.1.4.min.js"
@@ -89,6 +91,7 @@
                 asp-fallback-src="~/lib/angular.min.js"
                 asp-fallback-test="window.angular">
         </script>
+        <script src="~/lib/chart.js"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         <script src="~/js/scripts.min.js" asp-append-version="true"></script>
     </environment>
