Restructuring current workout into its own controller.

--- a/LB.Web/LB.Web/Views/Shared/_Layout.cshtml
+++ b/LB.Web/LB.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - LiftBook</title>
+    <title>@ViewData["Title"] - Lift Book</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -36,7 +36,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="CurrentWorkout">Current Workout</a></li>
+                    <li><a asp-area="" asp-controller="CurrentWorkout" asp-action="Index">Current Workout</a></li>
                 </ul>
             </div>
         </div>
