--- a/LB.Web/LB.Web/Views/Shared/_Layout.cshtml
+++ b/LB.Web/LB.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Lift Book</title>
+    <title>@ViewData["Title"] - Lift Notebook</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -31,12 +31,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">LiftBook</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Strength Notebook</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Dashboard</a></li>
                     <li><a asp-area="" asp-controller="CurrentWorkout" asp-action="Index">Current Workout</a></li>
+                    @await Html.PartialAsync("_LoginPartial")
                 </ul>
             </div>
         </div>
@@ -45,7 +46,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - LiftBook</p>
+            <p>&copy; 2018 - Strength Notebook</p>
         </footer>
     </div>
 
